# Personal-Graphics-Playgound

./: .gitmodules  CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: core.cpp  math.hpp  renderable.cpp  renderable.hpp
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
